client/src/App.css
/* ... */
@keyframes fade {

  0% {
    opacity: 1;
  }


  100% {
    opacity: 0
  }
}

@keyframes fade-from-bottom {

  0% {
    opacity: 0;
    transform: translateY(100px);
  }


  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes font-fade-in {

  0% {
    font-variation-settings: "wght" 100;
    letter-spacing: -0.5em;
  }

  100% {
    font-variation-settings: "wght" 200;
    letter-spacing: 0.1em;
  }
}


@keyframes hue {

  0% {
    box-shadow: 0px;
  }

  50% {
    box-shadow: 0px 0px 10px 2px #39FF14
  }

  100% {
    box-shadow: 0;
  }
}

.spinner {
  position: absolute;
  inset: 0;
  margin: auto;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  border: 4px solid rgb(88, 88, 88);
  border-top: #1DB954 4px solid;
  animation: spin 1s linear infinite;
}

.toast {
  position: fixed;
  background-color: rgb(73, 73, 73);
  padding-inline: 10px;
  border-radius: 10px;
  width: max-content;
  height: max-content;
  margin: auto;
  color: white;
  font-weight: lighter;
  font-size: clamp(7.5px, 1vw, 1.5vw);
  opacity: 0;
  transition: opacity .5s ease-in-out;
}

.bottom-toast {
  z-index: 99;
  bottom: 10vh;
}

.toast :where(button, a) {
  margin-left: 5px;
  width: fit-content;
  color: #1DB954;
  /* font-size: 18px; */
  font-weight: bold;
}


.toast-fade {
  opacity: 1;
  animation: fade linear 1s forwards;
  animation-delay: 6s;
}

.this-is-empty {
  height: 100%;
  text-align: center;
  position: relative;
}

.this-is-empty p {
  margin-top: 5%;
  font-weight: 250;
}

.this-is-empty img {
  max-width: 80%;
  min-width: 250px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}


li {
  list-style: none;
}

.login-wrapper {
  margin-block: 20vh;
  margin-inline: 30vw;
  padding-inline: 5px;
  min-width: min-content;
  text-align: center;
}

.login-wrapper>* {
  display: block;
}

.login-wrapper h1 {
  color: black;
  font-size: clamp(1.8rem, 4vw, 5vw);
  animation: font-fade-in 1.5s forwards;
}

.login-wrapper p {
  font-size: calc(var(--responsive-font) + 2px);
  margin-block: 4rem
}

.login-wrapper .btn {

  background-color: rgb(159, 159, 159);
  color: white;
  margin-bottom: 4rem;
  display: flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  margin-inline: auto auto;
  gap: 2px;
}

.login-wrapper small {

  font-size: 10px;

}

.header-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 11%;
  height: 10dvh;
  /* border:1px solid blue */
}

.main-wrapper {
  /* margin-inline: var(--left-margin); */
  display: flex;
  justify-content: center;
  padding-inline: 2%;
  gap: 2%;
  /* height: 100vh; */
  /* margin-bottom: 30px; */
}



.nav {
  margin-block: 15%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  width: fit-content;
  border-radius: 35px;
  z-index: 20;
  /* padding-block: 3rem; */
}

.nav * {
  font-size: calc(var(--responsive-font) + 1rem);
  color: var(--secondary-color)
}

.navlink {
  margin: 1.5rem;
  width: fit-content
}

.navlink:hover span {
  color: #39FF14;
  transition: color .3s ease-in-out;
}

.navlink.active {
  border-bottom: #dbe0e6cf 3px solid;
}

.nav .btn {
  padding: 0px;
  margin-right: 5%;
  background: none;
  box-shadow: none;
}

.nav .btn:hover {
  background: none;
}

.btn {
  border: none;
  padding: 10px 15px;
  border-radius: 20px;
  background-color: var(--light-gray-shade);
  transition: background-color 0.2s ease;
  cursor: pointer;
  outline: none;
  display: inline-block;
}

.btn:hover {

  background-color: #1DB954;
}

.btn:active {
  outline: none;
}


.logo h1 {

  font-size: calc(2vw + 1.1rem);
  font-weight: 150;
}



.searchbar-container {
  /* border: #0048aa 1px solid; */
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.searchbar {
  width: 100%;
  padding-block: .8rem;
  padding-left: 5px;
  font-size: 16px;
  border-radius: 25px;
  border: none;
  background-color: rgba(255, 255, 255, 0.155);
  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
  background-image: url("D:\Users\rodri\Área de Trabalho\Sites\music-player\search-icon.png");
  background-repeat: no-repeat;
  background-size: 25px;
  background-position: 97%;
}

.searchbar:focus {

  outline: none;
}



.user {
  position: relative;
}



.user p {

  opacity: 0;
  font-size: calc(var(--responsive-font) - 2px);
  transition: opacity 0.2s ease-in-out;
  top: 65%;
  right: -90%;
  position: absolute;
  z-index: 10;
}

.user img {

  width: 40px;
  height: 40px
}

.user ul {
  position: absolute;
  bottom: -25%;
  /* left: 10%; */
  right: 10%;
  /* transform: translateX(25%); */
  width: max-content;
  padding: 5px;
  transition: .2s ease-in-out background-color;
}

.user :is(img, span, ul) {
  cursor: pointer;
}


.user ul:hover {
  background-color: rgba(184, 183, 183, 0.915);
}

.account-icon {
  margin-block: 50%;
  font-size: calc(2vw + 1.3rem);
  color: var(--secondary-color);
}

.user:hover .name {

  opacity: 1
}

.content-wrapper {
  width: 85%;
  height: 550px;
  overflow-x: hidden;
  overflow-y: hidden;
  padding: 0px 20px 0px 20px;
  box-shadow: -10px 0px 10px -5px rgba(0, 0, 0, 0.2);
  border-radius: 15px;
}

.content-wrapper:has(.row-elements) {
  height: fit-content
}

.content-title {

  font-size: calc(var(--responsive-font) + 5px);
  font-weight: 500;
  margin: 20px 0 10px 15px
}

.row-elements {
  display: flex;
  flex-flow: row nowrap;
  overflow-y: visible;
  height: fit-content;
  overflow-x: scroll;
  border-radius: 10px;
}

.content-title {
  color: white;
  font-weight: 300;
}

.row-elements::-webkit-scrollbar {
  display: none;
}



.light-background {

  background-color: var(--light-gray-shade);
}


.card {

  flex-shrink: 0;
  position: relative;
  border-radius: 15px;
  /* box-shadow: 0px 3px 6px rgb(143, 143, 143); */
  width: fit-content;
  /* height: 90px; */
  cursor: pointer;
  margin: 5px 5px 20px 5px;
  border: 1px solid #dbe0e6cf;
}
/* ... */

